merge thien